Make sure body covers height of page

--- a/src/style.scss
+++ b/src/style.scss
@@ -3,6 +3,7 @@ html {
 }
 
 body {
+  min-height: 100vh;
   margin: 0;
   background: #111;
   color: #fff;
